# MakeEngine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
TestBin/: CMakeLists.txt  main.cpp
include/: MakeEngine.h  debug.h  library.h
src/: CMakeLists.txt  MEBaseTypes.h  MEDebug.cpp  MEDebug.h  MEGlobal.h  METime.cpp  METime.h  debug.cpp  debug.h
src/MEApplication/: MEWindow.cpp  MEWindow.h
src/MESystem/: MEDelegate.cpp  MEDelegate.h
test_bin/: CMakeLists.txt  Engine.h  main.cpp
